ooda.ebnf
(* =================================================================== *)
(* OODA Programming Language (openOODA) - Formal EBNF Grammar Specification *)
(* =================================================================== *)

Program           ::= { Item } ;
Item              ::= FunctionDecl | TypeDecl | TraitDecl | ImportDecl ;

(* ------------------------------------------------------------------- *)
(* Declarations                                                        *)
(* ------------------------------------------------------------------- *)

ImportDecl        ::= "import" Identifier [ "::" Identifier ] ";" ;

TypeDecl          ::= "type" Identifier "=" ( SumType | StructType | RefinementType | Newtype ) ";" ;
SumType           ::= Variant { "|" Variant } ;
Variant           ::= Identifier [ "(" Type ")" ] ;
StructType        ::= "struct" "{" { FieldDecl } "}" ;
FieldDecl         ::= Identifier ":" Type [ "," ] ;
RefinementType    ::= Type "where" Expression ;
Newtype           ::= "newtype" Type ;

FunctionDecl      ::= [ "pub" ] "fn" Identifier "(" [ ParameterList ] ")" [ "->" Type ] 
                      [ ContractSpec ] 
                      Block 
                      [ VerifyBlock ] ;

ParameterList     ::= Parameter { "," Parameter } ;
Parameter         ::= Identifier ":" [ "&" ] Type ;

ContractSpec      ::= { Precondition | Postcondition | SpecClause } ;
Precondition      ::= "requires" Expression ;
Postcondition     ::= "ensures" Expression ;
SpecClause        ::= "spec" StringLiteral ;

VerifyBlock       ::= "verify" Identifier "{" { Statement } "}" ;

(* ------------------------------------------------------------------- *)
(* Types                                                               *)
(* ------------------------------------------------------------------- *)

Type              ::= PrimitiveType | CustomType | OptionType | ResultType | CapabilityType ;
PrimitiveType     ::= "Int" | "Float" | "String" | "Bool" | "u64" | "i32" | "Void" ;
CustomType        ::= Identifier ;
OptionType        ::= "Option" "[" Type "]" ;
ResultType        ::= "Result" "[" Type "," Type "]" ;
CapabilityType    ::= "NetCap" | "FsCap" | "EnvCap" | "SysCap" ;

(* ------------------------------------------------------------------- *)
(* Statements & Control Flow                                           *)
(* ------------------------------------------------------------------- *)

Block             ::= "{" { Statement } [ Expression ] "}" ;
Statement         ::= LetStmt | ReturnStmt | ExprStmt ;

LetStmt           ::= "let" [ "mut" ] Identifier [ ":" Type ] "=" Expression ";" ;
ReturnStmt        ::= "return" [ Expression ] ";" ;
ExprStmt          ::= Expression ";" ;

(* ------------------------------------------------------------------- *)
(* Expressions                                                         *)
(* ------------------------------------------------------------------- *)

Expression        ::= IfExpr | MatchExpr | BinaryExpr | CallExpr | PrimaryExpr ;

IfExpr            ::= "if" Expression Block [ "else" ( Block | IfExpr ) ] ;
MatchExpr         ::= "match" Expression "{" { MatchArm } "}" ;
MatchArm          ::= Pattern "=>" ( Expression "," | Block ) ;
Pattern           ::= Identifier [ "(" Identifier ")" ] | Literal | "_" ;

BinaryExpr        ::= PrimaryExpr BinaryOp Expression ;
BinaryOp          ::= "+" | "-" | "*" | "/" | "%"
                    | "==" | "!=" | "<" | "<=" | ">" | ">="
                    | "&&" | "||"
                    | "&" | "|" | "^" | "<<" | ">>"
                    | ".." | "..=" ;

CallExpr          ::= PrimaryExpr "(" [ ArgList ] ")" [ "?" ] ;
ArgList           ::= Expression { "," Expression } ;

PrimaryExpr       ::= Literal | Identifier | ParenExpr ;
ParenExpr         ::= "(" Expression ")" ;

Literal           ::= IntLiteral | FloatLiteral | StringLiteral | BoolLiteral ;
IntLiteral        ::= [ "-" ] Digit { Digit } ;
FloatLiteral      ::= [ "-" ] Digit { Digit } "." Digit { Digit } ;
StringLiteral     ::= '"' { Character } '"' ;
BoolLiteral       ::= "true" | "false" ;

Identifier        ::= Letter { Letter | Digit | "_" } ;
Letter            ::= "a".."z" | "A".."Z" ;
Digit             ::= "0".."9" ;
